(Build) Added a button to remove the existing divs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <script src="index.js" defer></script>
 
-    <div id="container"></div>
+    <button id="btn">New Grid</button>
+    <div id="container">
+      
+    </div>
   </body>
 </html>
